# worldquant-miner

./: .gitignore
Generation Two.app/Contents/: Info.plist
Generation Two.app/Contents/MacOS/: generation-two-launcher
generation_one/naive-ollama/: alpha_generator_ollama.py  alpha_orchestrator.py  improved_alpha_submitter.py  start.sh
generation_two/: ENVIRONMENT_SETUP_GUIDE.md  pyproject.toml  setup.py
generation_two/core/: algorithmic_template_generator.py  compiler_knowledge.json  credential_manager.py  enhanced_template_generator_v3.py  local_expression_validator.py  operator_parameter_normalizer.py  selection_safety.py  simulator_tester.py  slot_manager.py  template_generator.py  template_validator.py
generation_two/core/config/: config_manager.py
generation_two/core/mining/: mining_coordinator.py
generation_two/gui/: run_gui.py
generation_two/gui/components/: evolution_panel.py  workflow_panel.py
generation_two/gui/components/workflow_steps/: step1_data_fields.py  step4_generation.py  step5_simulation.py  step6_mining.py
generation_two/gui/components/workflow_steps/step6_mining_modules/: mining_engine.py  mining_ui.py
generation_two/ollama/: ollama_manager.py  remote_llm.py
generation_two/self_evolution/: evolution_executor.py
generation_two/storage/: backtest_storage.py
generation_two/tests/: test_selection_safety.py
