[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generation-two"
version = "1.0.0"
description = "WorldQuant Brain Alpha Mining System - Generation Two"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "WorldQuant Miner", email = "your-email@example.com"}
]
keywords = ["worldquant", "alpha", "mining", "quantitative", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "PyYAML>=6.0",
    "urllib3<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
generation-two = "generation_two.gui.run_gui:main"

[tool.setuptools]
package-dir = {"" = ".."}
packages = [
    "generation_two",
    "generation_two.core",
    "generation_two.core.config",
    "generation_two.core.mining",
    "generation_two.core.recorder",
    "generation_two.core.utils",
    "generation_two.data_fetcher",
    "generation_two.evolution",
    "generation_two.gui",
    "generation_two.gui.components",
    "generation_two.gui.components.workflow_steps",
    "generation_two.gui.components.workflow_steps.step6_mining_modules",
    "generation_two.ollama",
    "generation_two.self_evolution",
    "generation_two.storage",
]

[tool.setuptools.package-data]
generation_two = [
    "constants/*.json",
    "gui/**/*.py",
    "core/**/*.py",
    "ollama/**/*.py",
    "data_fetcher/**/*.py",
    "storage/**/*.py",
]
